test/kubernetes/e2e/features/http_listener_options/testdata/basic-http-lis-opt-listener-set.yaml
apiVersion: gateway.solo.io/v1
kind: HttpListenerOption
metadata:
  name: server-override-ls-1
spec:
  targetRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    name: gw-1
  options:
    httpConnectionManagerSettings:
      serverName: "server-override-ls-1"
