test/kubernetes/e2e/features/http_listener_options/testdata/basic-http-lis-opt-section.yaml
apiVersion: gateway.solo.io/v1
kind: HttpListenerOption
metadata:
  name: server-name
spec:
  targetRefs:
  # - group: gateway.networking.k8s.io
  #   kind: Gateway
  #   name: gw-1
  #   sectionName: http
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw-2
    sectionName: other
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    name: second-workload-listeners
    sectionName: second
  options:
    httpConnectionManagerSettings:
      serverName: "unit-test v4.19"
