test/kubernetes/e2e/features/http_listener_options/testdata/basic-http-lis-opt.yaml
apiVersion: gateway.solo.io/v1
kind: HttpListenerOption
metadata:
  name: server-override-gw-1
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw-1
  options:
    httpConnectionManagerSettings:
      serverName: "server-override-gw-1"
