test/kubernetes/e2e/features/http_listener_options/testdata/not-attached-http-lis-opt.yaml
apiVersion: gateway.solo.io/v1
kind: HttpListenerOption
metadata:
  name: server-name-missing-gw
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: missing-gw
  options:
    httpConnectionManagerSettings:
      serverName: "should-not-attach"
